syntax = "proto3";
package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1; // the id shouldn't matter
}

message CreateBlogResponse {
  Blog blog = 1; // this id will correspond to the one in MongoDB
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

service BlogService {

  // Create blog RPC service call
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
  // Read blog RPC service call
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {}; // returns NOT_FOUND if not found
  // Update blog RPC service call
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};

}